fix errors in channels and cart yaml
